--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,17 +6,53 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".user.ui.login.LoginActiity">
+
     <com.jgabrielfreitas.core.BlurImageView
         android:id="@+id/bg"
-        android:transitionName="bgImage"
-        android:scaleType="centerCrop"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scaleType="centerCrop"
         android:src="@drawable/login_wallpaper"
+        android:transitionName="bgImage"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="20dp"
+        app:cardCornerRadius="10dp"
+        app:cardBackgroundColor="@color/logo_bg"
+        app:layout_constraintVertical_bias="0.2"
+        app:layout_constraintBottom_toTopOf="@+id/emailCon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" >
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:orientation="vertical"
+          android:gravity="center"
+          android:layout_margin="5dp">
+          <ImageView
+              android:layout_width="100dp"
+              android:layout_height="100dp"
+              android:src="@mipmap/ic_launcher"
+              />
+          <TextView
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="@string/app_name"
+              android:textColor="@color/white"
+              android:textSize="18sp"
+              android:textStyle="bold"/>
+      </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+
     <LinearLayout
         android:id="@+id/emailCon"
         android:layout_width="wrap_content"
@@ -74,38 +110,51 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0"
-        app:layout_constraintHorizontal_bias="0.45"
-        app:layout_constraintTop_toBottomOf="@+id/passwordCon"
+        android:clipToPadding="false"
         android:gravity="center"
         android:padding="7dp"
-        android:clipToPadding="false">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.45"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/passwordCon"
+        app:layout_constraintVertical_bias="0">
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/login"
-            android:transitionName="login"
             android:layout_width="@dimen/PrimaryButton"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
-            android:shadowRadius="0"
             android:backgroundTint="@color/btnPrimary"
-            android:text="Login"/>
+            android:shadowRadius="0"
+            android:text="Login"
+            android:transitionName="login" />
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/register"
-            android:transitionName="register"
-            android:lines="1"
-            android:backgroundTint="@color/btnSecondary"
             android:layout_width="@dimen/SecondayButton"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/btnSecondary"
+            android:lines="1"
             android:text="Register"
-            />
+            android:transitionName="register" />
+
     </LinearLayout>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/forgot_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Forgot password"
+        app:layout_constraintVertical_bias="0.3"
+        app:layout_constraintBottom_toBottomOf="@+id/bg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout9" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
