--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,8 @@
     <dimen name="loginTextWidth">300dp</dimen>
     <dimen name="PrimaryButton">208dp</dimen>
     <dimen name="SecondayButton">100dp</dimen>
+
+    <dimen name="greeting_card_height">60dp</dimen>
+
+    <dimen name="aims_description">20sp</dimen>
 </resources>
